Bug 1406008 - Add pref for just dumping the parent process display list. r=jrmuizel

MozReview-Commit-ID: Fdm2f5jbJ4z

--HG--
extra : rebase_source : c24893dc67e40a34ec03bcc36322c88671fe0fbf